--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fisioterapeuta especializada em fisioterapia hospitalar, 
+    respiratória, pilates e reabilitação ortopédica. Atendimento em Juiz de Fora.">
     <title>Dra. Diovana Landim - Fisioterapeuta</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -32,7 +34,7 @@
                 <i class="fab fa-whatsapp"></i> Agende uma consulta
             </a>
         </div>
-        <img src="img/84.png" alt="Dra. Diovana Landim" class="foto-perfil">
+        <img src="img/84.png" alt="Foto da Dra. Diovana Landim, fisioterapeuta" class="foto-perfil">
     </section>
 
     <!-- Seção Sobre -->
@@ -54,7 +56,7 @@
     <div class="servicos-grid">
         <div class="servico-card">
             <i Class="fas fa-home"></i>
-             <h3>Fisioterapia Domicilar</h3>
+             <h3>Fisioterapia Domiciliar</h3>
              <p>Atendimento domiciliar sem sair do conforto da sua casa.</p>
          </div>
          <div class="servico-card">
@@ -98,7 +100,7 @@
 -->
     <!-- Rodapé -->
     <footer>
-        <p>© 2023 Dra. Diovana Landim</p>
+        <p>© 2024 Dra. Diovana Landim</p>
     </footer>
 
     <script src="script.js"></script>
