--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     respiratória, pilates e reabilitação ortopédica. Atendimento em Juiz de Fora.">
     <title>Dra. Diovana Landim - Fisioterapeuta</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
