--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Menu Mobile -->
     <header>
         <div class="menu-container">
-            <div class="logo">Dra. Diovana</div>
+            <div class="logo">Diovana Landim</div>
             <div class="menu-mobile">
                 <i class="fas fa-bars"></i>
             </div>
@@ -42,7 +42,7 @@
     <section id="sobre" class="section">
         <h2>Sobre Mim</h2>
         <div class="sobre-content">
-            <p> Sou fisioterapeuta especializada em Fisioterapia Hospitalar pela SUPREMA, com a missão de oferecer cuidado humanizado e empático. 
+            <p> Sou fisioterapeuta pós-graduada em Fisioterapia Hospitalar pela SUPREMA, com a missão de oferecer cuidado humanizado e empático. 
                 Acredito que a reabilitação vai além da técnica, valorizando a escuta, o acolhimento e o respeito ao ritmo de cada paciente. 
                 Atuo como voluntária no Hospital do Câncer ASCONCER, auxiliando na recuperação de pacientes oncológicos para proporcionar mais 
                 conforto e qualidade de vida. Também realizo atendimentos domiciliares e acompanho pacientes no pós-operatório, sempre 
@@ -89,21 +89,16 @@
     </div>
 </section>
 
-    <!-- Seção Contato 
-  <!--   <section id="contato" class="section">
-        <h2>Contato</h2>
-        <form class="hero-content">
-            <a href="https://wa.me/5532984320661" class="botao-consulta">
-                <i class="fab fa-whatsapp"></i> Agende uma consulta
-            </a>
-        </form>
-    </section>
--->
     <!-- Rodapé -->
     <footer>
         <p>© 2024 Dra. Diovana Landim</p>
     </footer>
 
     <script src="script.js"></script>
+
+<a href="https://wa.me/5532984320661" class="whatsapp-fixo" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
+
 </body>
 </html>
